trunk/Archive2/c9/4db68dd48faffe/output
main.cpp: In constructor 'A::A()':
main.cpp:2:29: error: 'malloc' was not declared in this scope
     A() : a((char*)malloc(10)) {}
                             ^
main.cpp: In function 'int main()':
main.cpp:12:17: error: 'free' was not declared in this scope
     free(a.get());
                 ^
